--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,1 +1,26 @@
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+    <div class="head">
+        <div class="mt-4 p-5 bg-primary text-white rounded">
+            <h1>MEET OUR DEDICATED TEAM</h1>
+            <P>At Mr Electrical we take pride in our exceptional team
+                 of dedicated electrical contractors who are at the forefront
+                  of innovation and reliability in the industry. With a combined 
+                  xperience of over , our team brings 
+                  a wealth of expertise to every project we undertake.
+            </P>
+        </div>
+    </div>    
+</body>
+</html>
