--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -279,23 +279,23 @@ having no on-job accidents.
   </div>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-2"><img src="../../assets/images/TRA.png" ></div>
-      <div class="col-sm-2"><img src="../../assets/images/taa-tanzania-airports-authority.jpg" alt=""></div>
-      <div class="col-sm-2"><img src="../../assets/images/Logo-crdb-bank-tanzania-clipart-PNG.png" alt=""></div>
-      <div class="col-sm-2"><img src="../../assets/images/NMBLogo1.png" class="hans"></div>
-      <div class="col-sm-2"><img src="../../assets/images/oryx-energies-vector-logo.png"></div>
-      <div class="col-sm-2"><img src="../../assets/images/large-1563370578-tmda_logo_transparent_bk.png"></div>
+      <div class="col-sm-2"><img src="../../assets/images/TRA.png" class="img-thumbnail" ></div>
+      <div class="col-sm-2"><img src="../../assets/images/taa-tanzania-airports-authority.jpg" class="img-thumbnail"></div>
+      <div class="col-sm-2"><img src="../../assets/images/Logo-crdb-bank-tanzania-clipart-PNG.png" class="img-thumbnail"></div>
+      <div class="col-sm-2"><img src="../../assets/images/NMBLogo1.png" class="img-thumbnail"></div>
+      <div class="col-sm-2"><img src="../../assets/images/oryx-energies-vector-logo.png" class="img-thumbnail"></div>
+      <div class="col-sm-2"><img src="../../assets/images/large-1563370578-tmda_logo_transparent_bk.png" class="img-thumbnail"></div>
     </div>
   </div>
   <br>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-2"><img src="../../assets/images/bugando.jpeg"></div>
-      <div class="col-sm-2"><img src="../../assets/images/institution_logo-1.png" alt=""></div>
-      <div class="col-sm-2"><img src="../../assets/images/immigration.jpeg" alt=""></div>
-      <div class="col-sm-2"><img src="../../assets/images/necta_logo-01.png" class="hans"></div>
-      <div class="col-sm-2"><img src="../../assets/images/BOT.png"></div>
-      <div class="col-sm-2"><img src="../../assets/images/fire.png"></div>
+      <div class="col-sm-2"><img src="../../assets/images/bugando.jpeg" class="img-thumbnail"></div>
+      <div class="col-sm-2"><img src="../../assets/images/institution_logo-1.png" class="img-thumbnail"></div>
+      <div class="col-sm-2"><img src="../../assets/images/immigration.jpeg" class="img-thumbnail"></div>
+      <div class="col-sm-2"><img src="../../assets/images/necta_logo-01.png" class="img-thumbnail"></div>
+      <div class="col-sm-2"><img src="../../assets/images/BOT.png" class="img-thumbnail"></div>
+      <div class="col-sm-2"><img src="../../assets/images/fire.png" class="img-thumbnail"></div>
     </div>
   </div>
   <br>
