--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -158,7 +158,7 @@
             <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><h1 style="color: black;position:absolute;right:990px;top:2400px;">Legal Permits required</h1></li>
         </ul>
     </div>
-    <div class="col"><img class="img-thumbnail" src="../../assets/images/telecom.jpg" style="float: right; height:250px;width: 450px;"></div>
+    <div class="col"><img class="img-thumbnail" src="../../assets/images/tele.jpeg" style="float: right; height:270px;width: 450px;"></div>
    </div>
    <div class="head">
     <div class="mt-4 p-5 bg-primary text-white rounded">
