--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -17,10 +17,319 @@
             <P>At Mr Electrical we take pride in our exceptional team
                  of dedicated electrical contractors who are at the forefront
                   of innovation and reliability in the industry. With a combined 
-                  xperience of over , our team brings 
-                  a wealth of expertise to every project we undertake.
+                  xperience of over 10 years, our team brings 
+                  a wealth of expertise to every project we undertake.Quality 
+                  is at the core of everything we do. Our team is committed to 
+                  delivering top-notch workmanship, ensuring that every project is 
+                  executed with precision and attention to detail. We adhere to the
+                  highest industry standards and codes, guaranteeing safe and reliable
+                  electrical solutions.
             </P>
         </div>
-    </div>    
-</body>
+    </div><br>
+    <div class="slider" id="div1">
+     </div> 
+    <div class="card"><div class="card-header"></div></div><br>
+    <div class="row">
+        <div class="col">  <div class="card" style="width:400px">
+            <img class="card-img-top" src="../../assets/images/mashombo.jpeg" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">MLAU MASSHOMBO</h4>
+              <p class="card-text">Managing Director</p>
+            </div>
+          </div><br>
+          <div class="card" style="width:400px">
+            <img class="card-img-top" src="../../assets/images/avatar.jpg" alt="Card image" style="width:100%;height: 250px;">
+            <div class="card-body">
+              <h4 class="card-title">PETRO MSESE (TECHNICAL DIRECTOR)</h4>
+              <p class="card-text">Mr. Petro Msese is a fully qualified electrical
+                engineer who holds a B.Eng. in Electrical &
+                Electronics Engineering.
+                With over 13 years working experience as an
+                electrical engineer,Gadi has accumulated
+                invaluable experience working on over 30
+                projects with some of the the best electrical
+                contractors in the country.</p>
+            </div>
+            </div><br>
+            <div class="card" style="width:400px">
+                <img class="card-img-top" src="../../assets/images/avatar2.png" alt="Card image" style="width:100%;height: 250px;">
+                <div class="card-body">
+                  <h4 class="card-title">SHABAN J KIMERA(MECHANICAL ENGINEER)</h4>
+                  <p class="card-text">Mr. Shaban Kimera is a registered
+                    professional mechanical engineer with a BSc
+                    in Engineering.
+                    Having worked as a mechanical engineer in
+                    1984, Shabani brings to the team highly
+                    valued experience in the industry and acts as
+                    a mentor for the rest of the technicians as he
+                    grooms them to become equally experienced
+                    and talented craftsmen.</p>
+                </div></div><br>
+        </div>
+        <div class="col">
+            <div class="card" style="width:400px">
+            <img class="card-img-top" src="../../assets/images/meck2.jpeg" alt="Card image" style="width:400px;height:250px;">
+            <div class="card-body">
+              <h4 class="card-title">MELKZEDECK CLEMENCE (GENERAL MANAGER)</h4>
+              <p class="card-text">QS. Melkzedeck Clemence, a Professional
+                Quantity Surveyor holding a Bachelor Degree
+                in Building Economics from Ardhi University
+                (Tanzania), (a Former Constituent of the
+                University of Dar es Salaam) on 2017.
+                He has Six years of experience in the field of
+                Construction
+                Industry
+                with
+                extensive
+                knowledge in project management and cost
+                estimation in a variety of projects from
+                inception to completion stage including
+                advising both client and contractors on
+                project planning, time and costing.</p>
+              
+            </div>
+             </div><br>
+             <div class="card" style="width:400px">
+                <img class="card-img-top" src="../../assets/images/avatar2.png" alt="Card image" style="width:100%;height: 250PX;">
+                <div class="card-body">
+                  <h4 class="card-title">MASUMBUKO. J. MGANZA (PROJECT MANAGER)</h4>
+                  <p class="card-text">Popularly known as Masu, he was literally born to be
+                    an electrical technician. From the moment he
+                    finished school, all he has ever been is an electrical
+                    technician.
+                    Masumbuko holds a Full Technician Certificate in
+                    Electrical Engineering from the DIT, as well as a Class
+                    B, EWURA Electricity Installation Contractor License.
+                    With over 19 years experience in the electrical
+                    industry and having worked on over 200 projects in
+                    the country, Masu is an invaluable leader of the
+                    technical team and gently guides the rest of the team
+                    to effectiveness gathered from his years in the in-
+                    dustry.</p>
+                </div></div><br>
+                <div class="card" style="width:400px">
+                    <img class="card-img-top" src="../../assets/images/avatar.jpg" alt="Card image" style="width:100%;height: 250px;">
+                    <div class="card-body">
+                      <h4 class="card-title">SALIM HAMAD (ELECTRICAL ENGINEER)</h4>
+                      <p class="card-text">Mr. Salim Hamad is a fully qualified Electrical
+                        Engineer who holds a B.Eng. In Electrical and
+                        Electronics Engineering from GAZI University, Turkey
+                        in 2010.
+                        With over 8 years working experience as an electrical
+                        engineer, Salim has added invaluable
+                        experience
+                        by working on over 70 projects with some of the the
+                        best electrical contractors and Solar. System works
+                        in the country.</p>
+                    </div>
+                  </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width:400px">
+                <img class="card-img-top" src="../../assets/images/xavier2.jpeg" alt="Card image" style="width:100%;height: 250px;">
+                <div class="card-body">
+                  <h4 class="card-title">EXAVIA NDAUKA(MARKETING EXECUTIVE)</h4>
+                  <p class="card-text">Mr. Ndauka is the Company’s Sales & Marketing
+                    Manager. From
+                    the moment he finished school, all he has ever been
+                    doing is a sales and marketing.
+                    He holds Bachelor degree from the University of
+                    Dodoma. He has 4 year of experience in field.</p>
+                </div></div><br>
+                <div class="card" style="width:400px">
+                    <img class="card-img-top" src="../../assets/images/avatar.jpg" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                      <h4 class="card-title">ANDREW NANGALABA (CHIEF ENGINEER)</h4>
+                      <p class="card-text">DIT, as well as a Full Technician Certificate in
+                        Electrical Engineering also from the DIT. At
+                        30, he has 9 years experience in the industry
+                        and is a registered member of the Institution
+                        of Engineers Tanzania . As a young man,
+                        Andrew brings to the organisation innovation
+                        and a youthful zeal that keeps the organisa-
+                        tion abreast of all latest technol- ogies and
+                        ways of constantly improving efficiency
+                        among the technical team.</p>
+                    </div></div><br>
+                    <div class="card" style="width:400px">
+                        <img class="card-img-top" src="../../assets/images/beautiful-woman-avatar-character-icon-free-vector.jpg" alt="Card image" style="width:100%;height: 250px;">
+                        <div class="card-body">
+                          <h4 class="card-title">HAPPINESS URONU (CHIEF ACCOUNTANT)</h4>
+                          <p class="card-text">Ms. Urono is our company chief Accountant. She has
+                            been with the company for 4 years now.
+                            Holding a Bachelor of Arts in Cooperative
+                            Management and Accounting at Moshi Cooperative
+                            University. Ms. Happy posseses both, excellent
+                            leadership and managerial skills and great decision
+                            making traits. on her watch, nothing goes unnoticed.</p>
+                        </div>
+                      </div>
+        </div>     
+    </div>
+    <div class="container-fluid" style="border-color: #ffffff;
+    box-shadow: 0px 2px 18px 0px rgba(0,0,0,0.3);height: 100px;">
+      <div class="row" >
+        <div class="col-sm-3"><i class="material-icons" style="font-size:55px;color:#c1c1df;opacity: 1;">build</i>
+        <h1 class="E1">EMERGENCE RAPAIRS</h1>
+        <h4 class="E2">Quick to react to keep you powered<br>and safe, with no call out charges</h4>
+      </div>
+        <div class="col-sm-3"><i class="material-icons" style="font-size:60px;color:rgba(193,192,222,0.5);">edit</i>
+          <h1 class="E1"> FREE  QUOTATIONS   </h1>
+        <h4 class="E2">Honest advice and free quotes from <br>trusted, experienced electricians </h4>
+        </div>
+        <div class="col-sm-3"><i class="material-icons" style="font-size:55px;color:#c1c1df">dashboard</i>
+          <h1 class="E1">ANY JOB ANY SIZE</h1>
+          <h4 class="E2">Whatever your requirment from testing<br>to full design and installation
+          </h4>
+        </div>
+        <div class="col-sm-3"><i class="material-icons" style="font-size:60px;color:#c1c1df">star_border</i>
+          <h1 class="E1">GUARANTEED WORK</h1>
+          <h4 class="E2">Fully guaranteed electrical works<br>to IEE Wiring Regulation standards </h4>
+        </div>
+      </div>
+    </div><br>
+    <div class="container-fluid">
+      <div class="et_pb_section  et_pb_section_8 et_section_regular">
+          
+          
+          
+        <div class=" et_pb_row et_pb_row_9">
+      <div class="et_pb_column et_pb_column_4_4  et_pb_column_24 et-last-child">
+      
+      
+      <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_center  et_pb_text_9">
+      
+      
+      <div class="et_pb_text_inner">
+        Why Choose MR.Electrical.?
+      </div>
+    </div>
+    <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_10">
+      
+      
+      <div class="et_pb_text_inner">
+        <h2>What makes us a preferred contractors</h2>
+      </div>
+    </div> <!-- .et_pb_text -->
+    </div> <!-- .et_pb_column -->
+    </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+       <div class="col-sm-3">
+       <ul>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p3"><h1>Industry Experts</h1></div></li>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p4"><h1>Highily Qualified</h1></div></li>
+        <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p6"><h1>Professional Teams</h1></div></li>
+       </ul>
+       </div>
+       <div class="col-sm-3">
+        <ul>
+          <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p3"><h1>Deliver on Time</h1></div></li>
+          <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p4"><h1>Work to Budget</h1></div></li>
+          <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p7"><h1>All specialism</h1></div></li>
+         </ul>
+       </div>
+        <div class="col-sm-3"><ul>
+          <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p3"><h1>Qulity Assurance</h1></div></li>
+          <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p4"><h1>client Satisfication</h1></div></li>
+          <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p7"><h1>problem solvers</h1></div></li>
+         </ul>
+        </div>
+        <div class="col-sm-3"><ul>
+          <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p3"><h1>Guaranteed work</h1></div></li>
+          <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p5"><h1>Any Sector</h1></div></li>
+          <li style="color: white;"><i class="material-icons" style="font-size:48px;color:aqua">check_circle</i><div class="p7"><h1>Recommended</h1></div></li>
+         </ul>
+        </div>
+      </div>  
+    </div> 
+    <div class="container-fluid">
+      <div class="container-fluid">
+        <div class="et_pb_section  et_pb_section_8 et_section_regular">
+            
+            
+            
+          <div class=" et_pb_row et_pb_row_9">
+        <div class="et_pb_column et_pb_column_4_4  et_pb_column_24 et-last-child">
+      
+        
+        <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_center  et_pb_text_9">
+        
+        
+        <div class="et_pb_text_inner">
+          Our  Contract Clients
+        </div>
+      </div> <!-- .et_pb_text --><div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_10">
+        
+        
+        <div class="et_pb_text_inner">
+          <h2>Just a few of the poeple we work with</h2>
+        </div>
+      </div> <!-- .et_pb_text -->
+      </div> <!-- .et_pb_column -->
+      </div> 
+      </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-2"><img src="../../assets/images/TRA.png" class="img-thumbnail"></div>
+        <div class="col-sm-2"><img src="../../assets/images/taa-tanzania-airports-authority.jpg" class="img-thumbnail"></div>
+        <div class="col-sm-2"><img src="../../assets/images/Logo-crdb-bank-tanzania-clipart-PNG.png" class="img-thumbnail"></div>
+        <div class="col-sm-2"><img src="../../assets/images/NMBLogo1.png" class="img-thumbnail"></div>
+        <div class="col-sm-2"><img src="../../assets/images/oryx-energies-vector-logo.png"  class="img-thumbnail"></div>
+        <div class="col-sm-2"><img src="../../assets/images/large-1563370578-tmda_logo_transparent_bk.png " class="img-thumbnail"></div>
+      </div>
+    </div>
+    <br>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-2"><img src="../../assets/images/bugando.jpeg" class="img-thumbnail"></div>
+        <div class="col-sm-2"><img src="../../assets/images/institution_logo-1.png" class="img-thumbnail"></div>
+        <div class="col-sm-2"><img src="../../assets/images/immigration.jpeg" class="img-thumbnail"></div>
+        <div class="col-sm-2"><img src="../../assets/images/necta_logo-01.png" class="img-thumbnail"></div>
+        <div class="col-sm-2"><img src="../../assets/images/BOT.png" class="img-thumbnail"></div>
+        <div class="col-sm-2"><img src="../../assets/images/fire.png" class="img-thumbnail"></div>
+      </div>
+    </div>
+    <br>
+    <br>
+    <div class="container-fuid">
+      <div class="row">
+        <div class="col-sm-3">
+          <video width="340" height="270" autoplay muted>
+            <source type="video/mp4; codecs=avc1.4D401E,mp4a.40.2" src="https://github.githubassets.com/images/modules/site/home/globe-900.h264.mp4">
+          </video>
+        </div>
+        <div class="col-sm-3"><img src="../../assets/images/location-icon-location-icon-png-blue.jpeg" style="width:70px;height:70px;">
+         <h4 class="g1">MR.ELECTRICAL LTD</h4>
+         <p class="p1"><span> P.O.Box 10233, Dar-es-salaam</span></p>
+         <p class="j1"><span> Plot 1178, Kangaroo street</span></p>
+         <p class="j2"><span> Mikocheni B.</span></p>
+         <br>
+         <br>
+         <br>
+         <div><i class="material-icons" style="font-size:48px;color:rgb(20, 233, 20)">call</i></div>
+         <h4 class="t1">TELEPHONE</h4>
+         <p class="j3"><span>+255 715 030 392</span></p>
+         <p class="j4"><span>+255 655 088 466</span></p>
+         <p class="j5"><span>+255 746 245 571</span></p>
+        </div>
+        <div class="col-sm-3">
+          <div class="g2"><i class="material-icons" style="font-size:48px;color:#3e0184; ">error</i></div>
+          <h4 class="t2">SERVICE INFORMATION</h4>
+          <div class="t3">
+            <p><strong>Electrical contractor</strong><br><strong>Fire&Preventatin System contractor</strong><br><strong>Air Conditioning contractor</strong><br><strong>Plumbing & Sanitations</strong><br><strong>ICT & Security systems</strong><br><strong>Renewable Energy Installation(solar)</strong><br><strong>Elevetor & Escalators Contractor</strong><br> Electrical Repairs<br><strong>Telecommunication Contractor</strong><br><strong>Network Cabling</strong></p>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="logo"><img src="../../assets/images/logo.jpg" alt="" style="width: 300px;height: 270px;opacity: 10%;"></div>
+        </div>
+      </div>
+    </div><br>
+    <div class="footer"><h4> © <!-- -->2023<!-- --> Mr.Electrical, Inc</h4></div>
+</body>    
 </html>
